@@ -1,4 +1,7 @@
 2016-04-26 (0.12.6)
+	Added LASTX, LASTY system variables
+
+2016-04-26 (0.12.6)
 	Fixes for unit case sensitivity
 
 2016-04-24 (0.12.6)
